src/App.css
*{
  font-family: 'Poppins', sans-serif;
  
}
html, body {
  margin: 0;
  max-width: 100%;
  overflow-x: hidden;
}
.sf-mono{
  font-family: 'Space Mono', monospace;
}

body{
  background-color: black;
  overflow: hidden;
}

.full{
  min-height: 100vh;
  max-height: 100vh;
}

.vl {
  margin-top: 5px;
  border-left: 20px solid rgb(239, 68, 68);
  height:10rem;
}
.email{
  bottom: 1rem;
  right: 1rem;
  font-size: 0.8rem;
  font-style: bold;

  position: fixed;
  color: rgb(211, 165, 165);
  writing-mode: vertical-rl;
  text-orientation: mixed;
}
.email:hover{

  color:whitesmoke;
  
}
/* center text */
.center{
  /* position: absolute; */
  /* top:50%;
  left:50%; */
  /* transform: translate(-60%,100%); */
  /* width: 70%; */
  margin-left: 9rem;
  font-size: 2rem;
  color: #94a3b8;
  display: flex;
  margin-top: 30%;
  /* -webkit-text-stroke: 0.1px white; */
}




/* button */
.dcv{
  background-color: #94a3b8;
  padding: 1rem 1.5rem;
  color: white;
  font-style:bold;
  border-radius: 5px;
}
.blob-container{
  
  position: relative;
}
.blob1{
  
  height: 40rem;
  width: 40rem;
  position: absolute;
  /* 
  right: 15rem; */
  /* top:1rem; */
  z-index: -1;
}
.blob2{
  height: 20rem;
  width: 20rem;
  position: absolute;
  /* right: 20rem;
  top:1rem; */
  z-index: -1;
}
.loading {
  animation: rotation 15s infinite linear;
}



.circle-text-container{
  position: relative;
  
}
.main{
  width:330px;
  height:330px;
  border:1px solid #CCC;
  position:absolute;
  top:0; 
  bottom:0; 
  left:-15%;
  margin:auto;
  border-radius:50%; 
}

.circle{
  width:30px;
  height:30px;
  background:cyan;
  border-radius:50%;
  position:absolute;
  top:0; bottom:0; left:0;right:0;
  overflow:hidden;
  margin:auto;
  animation: circle 12s linear infinite;
}
.section-two{
  min-height: 100vh;
  padding: 2rem;
  /* scroll-snap-stop: always; */
}
.section-two Grid{
  color: #94a3b8;
}
.about{
  height: 100%;
  width: 100%;
  font-size: 1.7rem;
  
}
.about-body{
  margin-left: 2rem;
  margin-right: 2rem;
  
}
.images{
  padding: 10px;
  width: 4rem;
}

.section-51{
  margin-top: 50px;
}
/* .about-text{
  
} */
.slogo{
  width: 70px;
  
}
.photograph{
  border: 1px solid rgb(248,113,113);
  padding: 20px;
  height: 260px;
  width: 200px;
  margin: 20px 10rem;
  filter: blur(1px);

}
.photograph:hover{
  filter: blur(0);
}

@media screen and (max-width: 800px){
  .photograph{
    margin: 10px 3rem;
  }
  .slogo{
    width: 30px;
  }
  .blob-container{
    top:-10%;
    left:50%;
  }
  .blob1{
    
    position: absolute;
    height:10rem;
    width: 10rem;
  }
  .blob2{
    position: absolute;
    height: 20rem;
    width: 20rem;
  }
  .center{
    font-size: 0.7rem;
    margin-left: 0rem;
  }
  .dcv{
    right:0;
    position: absolute; 
    padding: 0.5rem 0.75rem;
    font-size: 0.5rem;
  }
  .about-body{
    margin-left: 2.5rem;
    margin-right: 0.5rem;
    margin-bottom: 2.5rem;
    
  }
  .images{
    padding: 10px;
    /* padding-top: 20px; */
    width: 4rem;
  }
  
}

.ipHolder{
  width: 80%;
  margin: 4rem;
  padding: 2rem;
  border: 1px solid rgb(248,113,113);
  
}
.ipHolder:hover{
 cursor: pointer;
 filter: brightness(110%);

}



/* animations */

@keyframes rotation {
  from {
      -webkit-transform: rotate(0deg);
  }
  to {
      -webkit-transform: rotate(359deg);
  }
}
@keyframes circle{
  0%{
    transform:rotate(0deg)
              translate(-165px)
              rotate(0deg);
  
  }
  100%{
    transform:rotate(360deg)
              translate(-165px)
              rotate(-360deg);
  }
}

